[package]
name = "holidays"
version = "0.1.0"
authors = ["michaelryan <mxryan@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest={version="*", features=["blocking", "json"]}
serde= {version = "*", features = ["derive"]}
serde_json ="*"
tokio = { version = "0.3", features = ["full"] }